force-app/main/default/objects/Equipment__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Is this equipment active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>