force-app/main/default/objects/Equipment__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity(LBS)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>