force-app/main/default/objects/Equipment__c/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <label>Compliance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>