force-app/main/default/objects/Equipment__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <inlineHelpText>Enter the heigth in centimeters.</inlineHelpText>
    <label>Height(cm)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>