force-app/main/default/objects/Equipment__c/fields/InfrastructureRequirements__c.field-meta.xml
<CustomField>
    <fullName>InfrastructureRequirements__c</fullName>
    <label>Infrastructure requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>