force-app/main/default/objects/Equipment__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <inlineHelpText>Enter the length in centimeters.</inlineHelpText>
    <label>Length(cm)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>