force-app/main/default/objects/Equipment__c/fields/PrecautionsWarnings__c.field-meta.xml
<CustomField>
    <fullName>PrecautionsWarnings__c</fullName>
    <label>Precautions/Warnings</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>