force-app/main/default/objects/Equipment__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>Serial Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>