force-app/main/default/objects/Equipment__c/fields/TransportConditions__c.field-meta.xml
<CustomField>
    <fullName>TransportConditions__c</fullName>
    <label>Transport conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>