force-app/main/default/objects/Equipment__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <inlineHelpText>Enter the width in centimeters.</inlineHelpText>
    <label>Width(cm)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>